<resources>
    <string name="app_name">Alarm</string>
    <string name="playlists">Playlists</string>
    <string name="main_page_title">Alarm</string>
    <string name="set_alarm">Set</string>
    <string name="settings_top_button">Settings</string>
    <string name="alarm_log_top_button">Log</string>
    <string name="settings_top_button_description">Open settings</string>
    <string name="alarm_log_top_button_description">Open alarm logs</string>
    <string name="notifications_top_button">Notifications</string>
    <string name="notifications_top_button_description">Open notifications</string>
    <string name="remove_alarm">Remove</string>
    <string name="next_song">Next song</string>
    <string name="fab_content_desc">Add new alarm</string>
    <string name="message_alarm_activated">Alarm set at %1$s</string>
    <string name="message_alarm_removed">Alarm is removed</string>
    <string name="enter_playlist_id">Enter playlist id</string>
    <string name="enter_next_song_id">Enter next song id</string>
    <string name="default_playlist">6sU9yIquDtGDUJ0ofpYAJV</string>
    <string name="default_next_song">spotify:track:5kl4Y5XymsUCl98GM7dgab</string>
    <string name="preference_file_key">android_alarm_clock_preferences</string>
    <string name="saved_notifications_key">saved_notifications_key</string>
    <string name="saved_spotify_access_token">saved_spotify_access_token</string>
    <string name="saved_spotify_access_token_timeout">saved_spotify_access_token_timeout</string>
    <string name="preference__alarm_reminder_minutes">preference__alarm_reminder_minutes</string>
    <string name="noPlaylistSelected">You have to select a playlist</string>
</resources>
