<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSwipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/hackPlayWrapper"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/playlist_name_input"
                android:text="@string/default_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:onClick="nextSong"
                android:text="@string/next_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarmListWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hackPlayWrapper"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alarmList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/fab_content_desc"
            app:srcCompat="@drawable/baseline_add_white_18dp" />


        <!--    <ProgressBar-->
        <!--            android:id="@+id/progressBar1"-->
        <!--            style="?android:attr/progressBarStyleLarge"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerHorizontal="true"/>-->

    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>